@@ -205,7 +205,8 @@ int main(int argc, char **argv) {
 
     /* send memcached request */
 
-    memcached_client_invoke(ctx.pool, fd, &memcached_socket_lease, &ctx,
+    memcached_client_invoke(ctx.pool, fd, ISTREAM_TCP,
+                            &memcached_socket_lease, &ctx,
                             MEMCACHED_OPCODE_GET,
                             NULL, 0,
                             key, strlen(key),
