@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.23) unstable; urgency=low
 
   * sink-header: support splice
+  * memcached-client: support splice (response)
 
  --
 
